package dev.vengateshm.cleanarchitecturemvvmnotesapp.core.util

object TestTags {
    const val ORDER_SECTION = "order_section"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
    const val NOTE_ITEM = "NOTE_ITEM"
}