...
) {
    Column(modifier = modifier) {
        Row(
            modifier = Modifier.fillMaxWidth()
        ) {
            DefaultRadioButton(
                text = "Title",
                isSelected = noteSort is NoteSort.Title,
                onSelect = { onSortChange(NoteSort.Title(noteSort.sortType)) }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Date",
...
                onSelect = {
                    onSortChange(noteSort.copy(SortType.Asc))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                isSelected = noteSort.sortType is SortType.Desc,
                onSelect = {
                    onSortChange(noteSort.copy(SortType.Desc))
                }
            )
        }
...
