...
            FloatingActionButton(
                onClick = {
                    navController.navigate(Screen.AddEditNote.route)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add note")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
                    style = MaterialTheme.typography.h5
                )
                IconButton(
                    onClick = {
                        viewModel.onEvent(NotesEvent.ToggleSortSection)
                    }) {
                    Icon(imageVector = Icons.Default.Sort, contentDescription = "Sort")
                }
            }

            // Sort section
            AnimatedVisibility(
                visible = noteListState.isSortSectionVisible,
...
